[package]
name = "rustenum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full", "macros"] }
futures = "0.3.21"
indicatif = "0.17.0-rc.5"
